--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.18",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-paginate-v2": "^1.3.9",
+    "mongoose-unique-validator": "^2.0.3",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
