--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "google-auth-library": "^6.0.2",
     "jsonwebtoken": "^8.5.1",
+    "minimist": "^1.2.5",
     "mongoose": "^5.9.18",
     "mongoose-paginate-v2": "^1.3.9",
     "mongoose-unique-validator": "^2.0.3",
