multer validations problems

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ uploads/images/hospital/**.jpg
 uploads/images/hospital/**.png
 uploads/images/hospital/**.gif
 
-uploads/images/user/**.jpg
-uploads/images/user/**.png
-uploads/images/user/**.gif
+uploads/images/users/**.jpg
+uploads/images/users/**.png
+uploads/images/users/**.gif
 
 uploads/images/doctor/**.jpg
 uploads/images/doctor/**.png
