--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,4 @@
 .env
 node_modules/
+uploads/
 google-signin-demo/node_modules
-
-uploads/images/hospital/**.jpg
-uploads/images/hospital/**.png
-uploads/images/hospital/**.gif
-
-uploads/images/users/**.jpg
-uploads/images/users/**.png
-uploads/images/users/**.gif
-
-uploads/images/doctor/**.jpg
-uploads/images/doctor/**.png
-uploads/images/doctor/**.gif
